[tool.poetry]
name = "banana-vision-service"
version = "0.1.0"
description = "Backend service for banana disease detection system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
supabase = "^2.3.1"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 